# zirco-playground

./: .gitignore  LICENSE  README.md  exec-test.sh  flake.nix
server/: Cargo.toml  dl-compiler.sh  seccomp.policy
server/src/: compilation_worker.rs  handlers.rs  main.rs  metrics_worker.rs  models.rs  sandbox.rs
web/public/: ansi_up.js  index.html  main.js  style.css
