[package]
name = "zirco_playground_api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
axum = { version = "0.8.8", features = ["macros"] }
futures = "0.3.31"
nix = { version = "0.31.1", features = ["user"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower_governor = "0.8.0"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
